# GaragePlaymate

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md
.cursor/rules/: cpp-style.mdc  github-workflow.mdc
cmake/: AsioSdk.cmake  CompilerWarnings.cmake  FetchCatch2.cmake  FetchDrWav.cmake  FetchJuce.cmake  FetchYamlCpp.cmake
docs/: ARCHITECTURE.md  PRODUCT_DESIGN.md
docs/tasks/: README.md  TASK_01_cmake_juce_scaffold.md  TASK_02_license_notice_readme.md  TASK_03_application_shell.md  TASK_04_core_domain_types.md  TASK_05_song_yaml_parser.md  TASK_06_song_folder_scanner.md  TASK_07_sqlite_schema_migrations.md  TASK_08_data_path_resolver.md  TASK_09_audio_device_service.md  TASK_10_streaming_track_source.md  TASK_11_preloaded_track_source.md  TASK_12_multitrack_mixer_engine.md  TASK_13_transport_controller.md  TASK_14_section_navigator.md  TASK_15_section_seek_integration.md  TASK_16_random_take_selector.md  TASK_17_session_persistence.md  TASK_18_playback_service_orchestration.md  TASK_19_failure_simulator_core.md  TASK_20_failure_audio_integration.md  TASK_21_library_service.md  TASK_22_setlist_crud.md  TASK_23_settings_service.md  TASK_24_library_ui.md  TASK_25_song_detail_ui.md  TASK_26_session_bar_ui.md  TASK_27_history_panel_ui.md  TASK_28_settings_ui.md  TASK_29_keyboard_shortcuts.md  TASK_30_sample_song_fixtures.md  TASK_31_core_unit_tests.md  TASK_32_packaging_portable_installer.md  TASK_33_mute_solo_controls.md
src/: main.cpp
src/app/: AppController.h  Application.cpp  Application.h
src/core/: SessionTypes.h  SettingsTypes.h  SongTypes.h
src/storage/: SongFolderScanner.cpp  SongFolderScanner.h  SongParser.cpp  SongParser.h  SongYamlParser.cpp  SongYamlParser.h  WavMetadataReader.cpp  WavMetadataReader.h
src/ui/: MainWindow.cpp  MainWindow.h
tests/: CMakeLists.txt
tests/core/: test_song_folder_scanner.cpp  test_song_yaml_parser.cpp
tests/fixtures/songs/duplicate-section/: song.yaml
tests/fixtures/songs/duplicate-section/tracks/drums/: track.yaml
tests/fixtures/songs/missing-id/: song.yaml
tests/fixtures/songs/missing-title/: song.yaml
tests/fixtures/songs/missing-title/tracks/drums/: track.yaml
tests/fixtures/songs/scan-test/: song.yaml
tests/fixtures/songs/scan-test/tracks/bass/: track.yaml
tests/fixtures/songs/valid-song/: song.yaml
tests/fixtures/songs/valid-song/tracks/bass/: track.yaml
tests/fixtures/songs/valid-song/tracks/drums/: track.yaml
